# sysml

./: .gitignore  access.tex  refs.bib
figs/: IMAGE_PLACEHOLDERS.md
svg-inkscape/: 00.SwarmRoboticsTasks_svg-tex.pdf_tex  03.HardwareArchitecture_svg-tex.pdf_tex  ActivitySwarmRobots_svg-tex.pdf_tex  DetailSwarmRoboticsTasks_svg-tex.pdf_tex  Model_svg-tex.pdf_tex  (+3 more)
tb4-sim/ros2_ws/src/paper_tb4_swarm/: package.xml  setup.cfg  setup.py
tb4-sim/ros2_ws/src/paper_tb4_swarm/config/: official_tb4_sim.yaml  real_explore_nav2.yaml  real_explore_slam.yaml  real_nav2_two_tb4.yaml  real_two_tb4.yaml  stable_sim.yaml
tb4-sim/ros2_ws/src/paper_tb4_swarm/docs/: experiment_protocol.md  notes.md  paper_alignment.md
tb4-sim/ros2_ws/src/paper_tb4_swarm/launch/: official_two_tb4.launch.py  real_clearance_map_one_tb4.launch.py  real_explore_one_tb4.launch.py  real_manual_map_one_tb4.launch.py  real_nav2_two_tb4.launch.py  real_two_tb4.launch.py  real_wall_map_one_tb4.launch.py  stable_two_tb4.launch.py
tb4-sim/ros2_ws/src/paper_tb4_swarm/maps/: lab.pgm  lab.yaml
tb4-sim/ros2_ws/src/paper_tb4_swarm/paper_tb4_swarm/: __init__.py  clearance_explorer.py  cmd_vel_relay.py  coordinator.py  frontier_explorer.py  map_utils.py  mbse_model.py  metrics_logger.py  nav2_goal_dispatcher.py  occupancy_grid_marker.py  odom_offsetter.py  odom_tf_broadcaster.py  real_graph_check.py  rviz_target_bridge.py  simple_goal_follower.py  static_map_publisher.py  target_publisher.py  wall_follow_mapper.py
tb4-sim/ros2_ws/src/paper_tb4_swarm/worlds/: two_tb4_lab.sdf  two_tb4_stable.sdf
(+51 files in other folders)
