<?xml version="1.0"?>
<package format="3">
  <name>paper_tb4_swarm</name>
  <version>0.1.0</version>
  <description>Two TurtleBot4 sim-to-real swarm experiment aligned with the MBSE paper mindset.</description>
  <maintainer email="avis@example.com">Avis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>turtlebot4_gz_bringup</exec_depend>
  <exec_depend>turtlebot4_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
